--- a/FindTheTime/war/FindTheTime.css
+++ b/FindTheTime/war/FindTheTime.css
@@ -11,7 +11,7 @@ html {
 }
 
 body {
-	margin: 0;
+	margin: 10px;
 }
 
 article,aside,details,figcaption,figure,footer,header,hgroup,main,menu,nav,section,summary
