--- a/FindTheTime/war/FindTheTime.css
+++ b/FindTheTime/war/FindTheTime.css
@@ -11,7 +11,7 @@ html {
 }
 
 body {
-	margin: 0;
+	margin: 20px;
 }
 
 article,aside,details,figcaption,figure,footer,header,hgroup,main,menu,nav,section,summary
@@ -192,7 +192,8 @@ table {
 }
 
 td,th {
-	padding: 0;
+	padding: 5;
+	border: 1px solid black;
 }
 /*! Source: https://github.com/h5bp/html5-boilerplate/blob/master/src/css/main.css */
 @media print {
